--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="container">
-        <input type="text" class="ric" placeholder="Ricarica il tuo tel...">
+        <input type="number" class="ric" placeholder="Ricarica il tuo tel...">
     </div>
     <div id="vedi_a_schermo">
         <p class="vedi-item"></p>
