--- a/index.html
+++ b/index.html
@@ -11,9 +11,18 @@
 <body>
     <div id="container">
         <input type="number" class="ric" placeholder="Ricarica il tuo tel...">
+        <input type="number" class="ric" placeholder="Ricarica il tuo tel...">
+        <input type="number" class="ric" placeholder="Ricarica il tuo tel...">
+    </div>
+    <div id="container-button">
+        <button>=></button>
+        <button>=></button>
+        <button>=></button>
     </div>
     <div id="vedi_a_schermo">
         <p class="vedi-item"></p>
+        <p class=""></p>
+        <p class=""></p>
     </div>
 </body>
 </html>
