--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <input type="number" class="ric" placeholder="Ricarica il tuo tel...">
     </div>
     <div id="container-button">
-        <button>=></button>
-        <button>=></button>
-        <button>=></button>
+        <button class="btn iphone">=></button>
+        <button class="btn samsung">=></button>
+        <button class="btn haweii">=></button>
     </div>
     <div id="vedi_a_schermo">
         <p class="vedi-item"></p>
