--- a/index.html
+++ b/index.html
@@ -9,20 +9,27 @@
     <title>esercizio ts</title>
 </head>
 <body>
+    <div class="abbellire">
+            <h1>Premi invio per aggiungere $ :</h1>
+        </div>
+    <div class="exp">
+        
     <div id="container">
-        <input type="number" class="ric" placeholder="Ricarica il tuo tel...">
-        <input type="number" class="ric" placeholder="Ricarica il tuo tel...">
-        <input type="number" class="ric" placeholder="Ricarica il tuo tel...">
+        <div class="allineare"><p>iphone:</p><input type="number" class="ric input" placeholder="Ricarica il tuo tel..."></div>
+        <div class="allineare"><p>samsung:</p><input type="number" class="ric input2" placeholder="Ricarica il tuo tel..."></div>
+        <div class="allineare"><p>haweii:</p><input type="number" class="ric input3" placeholder="Ricarica il tuo tel..."></div>
     </div>
+    <h2 class="white">Vedi in console:</h2>
     <div id="container-button">
         <button class="btn iphone">=></button>
         <button class="btn samsung">=></button>
         <button class="btn haweii">=></button>
     </div>
     <div id="vedi_a_schermo">
-        <p class="vedi-item"></p>
-        <p class=""></p>
-        <p class=""></p>
+        <p class="model-p vedi-item"></p>
+        <p class="model-p vedi-item2"></p>
+        <p class="model-p vedi-item3"></p>
     </div>
+</div>
 </body>
 </html>
